Prevent open search from bleeding into navigation
Prevent shadow of open search popup from bleeding into off-canvas
navigation on small screens.

--- a/Resources/Private/Scss/Sections/_wrap.scss
+++ b/Resources/Private/Scss/Sections/_wrap.scss
@@ -18,6 +18,7 @@
 		@include respond-to(medium) {
 			cursor: pointer;
 			margin-left: 61.8%;
+			overflow: hidden;
 
 			&::before {
 				cursor: pointer;
